Donation Controller part5

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.mvc.locale-resolver=fixed
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
+
+spring.thymeleaf.render-hidden-markers-before-checkboxes=true
